--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
@@ -94,7 +94,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -110,7 +110,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\myLibs\libs\debug\x64;%(AdditionalLibraryDirectories);C:\SQLite3\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -129,7 +129,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -149,7 +149,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>C:\myLibs\libs\release\x64;C:\SQLite3\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
