added a new project to sln

--- a/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
+++ b/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
@@ -19,8 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\similarImage.cpp" />
     <ClCompile Include="CreateImageHash.cpp" />
-    <ClCompile Include="similarImage.cpp" />
+    <ClCompile Include="readFromClipboard.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="similarImage.h" />
