--- a/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
+++ b/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
@@ -93,7 +93,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>myFileDirDll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -108,8 +108,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>myFileDirDll.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\myLibs\libs\Debug\x64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\myLibs\libs\Debug\x64;C:\SQLite3\lib\x64;..\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -128,7 +128,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>myFileDirDll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,7 +147,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>myFileDirDll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\myLibs\libs\Release\x64</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -155,10 +155,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\database.h" />
+    <ClInclude Include="..\DatabaseController.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\database.cpp" />
+    <ClCompile Include="..\DatabaseControllercpp.cpp" />
     <ClCompile Include="CreateNewDB.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
