--- a/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
+++ b/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
@@ -148,7 +148,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\myLibs\libs\Release\x64</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\myLibs\libs\Release\x64;C:\SQLite3\lib\x64;..\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
