--- a/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
+++ b/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="..\similarImage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\database.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\DatabaseController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +48,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\similarImage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\database.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\DatabaseControllercpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
