--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\database.h" />
+    <ClInclude Include="..\MD5.h" />
     <ClInclude Include="DataBaseBuilder.h" />
     <ClInclude Include="DatabaseDataParser.h" />
     <ClInclude Include="DataBaseTableStructs.h" />
@@ -173,6 +174,7 @@
   <ItemGroup>
     <ClCompile Include="..\database.cpp" />
     <ClCompile Include="..\DatabaseControllercpp.cpp" />
+    <ClCompile Include="..\MD5.cpp" />
     <ClCompile Include="DataBaseBuilder.cpp" />
     <ClCompile Include="DatabaseDataParser.cpp" />
     <ClCompile Include="fileWalker.cpp" />
