--- a/SmartCatalogue/SmartCatalogue.vcxproj
+++ b/SmartCatalogue/SmartCatalogue.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="addRecordBox.cpp" />
