--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj.filters
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="DatabaseBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
