--- a/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
+++ b/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="..\DatabaseController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\DatabaseControllercpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
