--- a/SmartCatalogue/SmartCatalogue.vcxproj.filters
+++ b/SmartCatalogue/SmartCatalogue.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="SmartCatalogue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SmartCatalogue.rc">
