--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj.filters
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="DatabaseManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\CFGHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\CFGHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
