--- a/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
+++ b/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="..\WinToDBMiddleman.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\CFGHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\WinToDBMiddleman.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\CFGHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
