--- a/SmartCatalogue/SmartCatalogue.vcxproj
+++ b/SmartCatalogue/SmartCatalogue.vcxproj
@@ -153,6 +153,7 @@
     <None Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CFGHelper.h" />
     <ClInclude Include="database.h" />
     <ClInclude Include="DatabaseController.h" />
     <ClInclude Include="SmartCatalogue.h" />
@@ -166,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="addRecordBox.cpp" />
+    <ClCompile Include="CFGHelper.cpp" />
     <ClCompile Include="childWindowCreation.cpp" />
     <ClCompile Include="database.cpp" />
     <ClCompile Include="DatabaseControllercpp.cpp" />
