--- a/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
+++ b/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
@@ -157,12 +157,14 @@
   <ItemGroup>
     <ClInclude Include="..\database.h" />
     <ClInclude Include="..\DatabaseController.h" />
+    <ClInclude Include="..\Utils.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\database.cpp" />
     <ClCompile Include="..\DatabaseControllercpp.cpp" />
+    <ClCompile Include="..\Utils.cpp" />
     <ClCompile Include="CreateNewDB.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
